# os-build-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HARNESS_DECISIONS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
docs/: GETTING_STARTED.md  ODC_GOTCHAS.md  REALTIME.md  SCREEN_WALK.md
examples/: README.md
harness/: ARCHITECTURE_DECOMPOSITION.md  BUILD_LOOP.md  CAPABILITY_MATRIX.md  CLAUDE.md  GAP_CLOSURE_PLAN.md  GATE_ACCURACY_PLAN.md  HARVEST_LEDGER.md  MODULAR_BUILD_GAP_PLAN.md  RECIPE_GAPS.md  SEAMS.md  STEP_ATOMICITY.md  architecture.py  build_cost.py  build_system.py  capture.py  cdp_helpers.py  corpus.py  decompose.py  expand.py  gate.py  harvest_ledger.jsonl  launch_build.sh  learning.py  mcp_client.py  mitre.py  prompt_recipes.py  prompt_step.py  reconcile.py  run_build.py  run_system.py  spec_ingest.py  system_gate.py  verify.py
scripts/: batch_recipes.py  build_banking.py  build_from_spec.py  cdp_balance_chain.py  cdp_bbox_probe.py  cdp_carousel_final_capture.py  cdp_chart_compare.py  cdp_chart_probe_p5.py  cdp_clone_structure.py  cdp_diag_theme_auth.py  cdp_dual_capture.py  cdp_dual_capture_demo.py  cdp_final_capture.py  cdp_harvest_layout_rules.py  cdp_inspect_login.py  cdp_login_screenshot.py  cdp_login_screenshot_p5.py  cdp_login_screenshot_p6.py  cdp_metrics_bust.py  cdp_open_blank.py  cdp_orig_bar_values.py  cdp_orig_chart_dom.py  cdp_orig_structure.py  cdp_osinline_rule.py  cdp_pass_d_capture.py  cdp_probe_classes.py  cdp_probe_demo_picker.py  cdp_probe_layout.py  (+37 more)
(+388 files in other folders)
